Maj API & Client-Front
